# MetaFinderKagi

./: .gitignore  README.md  pyproject.toml
metafinder/: cli.py  core.py
metafinder/utils/: banner.py  exception.py  library.py
metafinder/utils/finder/: kagi.py
