[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metafinder"
version = "1.2"
description = "MetaFinder - Metadata search through Search Engines"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [ {name = "Josue Encinar (@JosueEncinar)"} ]
license = {text = "GNU GPLv3+"}
keywords = ["metadata","search","kagi","google","bing","baidu"]
urls = {"Homepage" = "https://github.com/Josue87/MetaFinder"}
requires-python = ">=3.7"

dependencies = [
  "requests>=2.25.1",
  "pikepdf>=2.5.2",
  "beautifulsoup4>=4.9.3",
  "openpyxl>=3.0.5",
  "python-docx>=0.8.6",
  "python-pptx>=0.6.18",
  "prompt-toolkit>=3.0.5",
  "urllib3>=1.26.4"
]

[project.scripts]
metafinder = "metafinder.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
